:bug: Fixed Getting Started With JS

--- a/Basics/1.GettingStartedWithJS.ipynb
+++ b/Basics/1.GettingStartedWithJS.ipynb
@@ -19,8 +19,19 @@
     "### Variables and Data Types\n",
     "\n",
     "In JavaScript, you can declare variables using the `var`, `let`, or `const` keywords. It has various data types such as numbers, strings, booleans, objects, arrays, and more.\n",
-    "\n",
-    "```javascript\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "vscode": {
+     "languageId": "javascript"
+    }
+   },
+   "outputs": [],
+   "source": [
     "// Variable declaration\n",
     "var greeting = \"Hello, world!\";\n",
     "let number = 42;\n",
@@ -31,28 +42,56 @@
     "let age = 30;\n",
     "let isStudent = true;\n",
     "let fruits = [\"apple\", \"banana\", \"cherry\"];\n",
-    "let person = { name: \"Alice\", age: 25 };\n",
-    "```\n",
-    "\n",
+    "let person = { name: \"Alice\", age: 25 };"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### Functions\n",
     "\n",
-    "Functions in JavaScript are reusable blocks of code that can be called and executed. They can take parameters and return values.\n",
-    "\n",
-    "```javascript\n",
+    "Functions in JavaScript are reusable blocks of code that can be called and executed. They can take parameters and return values."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "vscode": {
+     "languageId": "javascript"
+    }
+   },
+   "outputs": [],
+   "source": [
     "// Function declaration\n",
     "function greet(name) {\n",
     "  return \"Hello, \" + name + \"!\";\n",
     "}\n",
     "\n",
     "// Function call\n",
-    "console.log(greet(\"John\"));\n",
-    "```\n",
-    "\n",
+    "console.log(greet(\"John\"));"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### Control Structures\n",
     "\n",
-    "JavaScript supports various control structures such as if-else statements, switch cases, and loops like for and while loops.\n",
-    "\n",
-    "```javascript\n",
+    "JavaScript supports various control structures such as if-else statements, switch cases, and loops like for and while loops.\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "vscode": {
+     "languageId": "javascript"
+    }
+   },
+   "outputs": [],
+   "source": [
     "// If-else statement\n",
     "let num = 10;\n",
     "\n",
@@ -62,19 +101,44 @@
     "  console.log(\"The number is negative.\");\n",
     "} else {\n",
     "  console.log(\"The number is zero.\");\n",
-    "}\n",
-    "\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "vscode": {
+     "languageId": "javascript"
+    }
+   },
+   "outputs": [],
+   "source": [
     "// For loop\n",
     "for (let i = 0; i < 5; i++) {\n",
     "  console.log(\"Iteration: \" + i);\n",
-    "}\n",
-    "```\n",
-    "\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### Document Object Model (DOM)\n",
     "\n",
-    "JavaScript can manipulate the Document Object Model (DOM) to create dynamic and interactive web pages.\n",
-    "\n",
-    "```html\n",
+    "JavaScript can manipulate the Document Object Model (DOM) to create dynamic and interactive web pages.\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "vscode": {
+     "languageId": "html"
+    }
+   },
+   "outputs": [],
+   "source": [
     "<!DOCTYPE html>\n",
     "<html>\n",
     "  <body>\n",
@@ -89,9 +153,13 @@
     "\n",
     "    <p id=\"demo\"></p>\n",
     "  </body>\n",
-    "</html>\n",
-    "```\n",
-    "\n",
+    "</html>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Conclusion\n",
     "\n",
     "This overview provides a glimpse into the essential components and functionalities of JavaScript. As you continue your journey, explore more complex concepts, such as object-oriented programming, asynchronous operations, and popular libraries like React.js and Node.js, to enhance your web development skills.\n",
