--- a/Basics/4. ArraysAndObjects.ipynb
+++ b/Basics/4. ArraysAndObjects.ipynb
@@ -12,7 +12,7 @@
     "\n",
     "### Working with Arrays\n",
     "\n",
-    "You can create arrays in JavaScript to store lists of values. You can see Arrays in detail in [ArraysInJS.ipynb] Here's an example of creating an array and accessing its elements:"
+    "You can create arrays in JavaScript to store lists of values. You can see Arrays in detail in [Arrays in JavaScript](5.%20ArraysInJS.ipynb) Here's an example of creating an array and accessing its elements:"
    ]
   },
   {
