:sparkles: Added Objects in JavaScript

--- a/Basics/4. ArraysAndObjects.ipynb
+++ b/Basics/4. ArraysAndObjects.ipynb
@@ -12,7 +12,7 @@
     "\n",
     "### Working with Arrays\n",
     "\n",
-    "You can create arrays in JavaScript to store lists of values. You can see Arrays in detail in [Arrays in JavaScript](5.%20ArraysInJS.ipynb) Here's an example of creating an array and accessing its elements:"
+    "You can create arrays in JavaScript to store lists of values. You can see Arrays in detail in [Arrays in JavaScript](5.%20ArraysInJS.ipynb). Here's an example of creating an array and accessing its elements:"
    ]
   },
   {
@@ -41,7 +41,7 @@
     "\n",
     "### Working with Objects\n",
     "\n",
-    "Objects in JavaScript allow you to store collections of key-value pairs. Here's an example of creating an object and accessing its properties:"
+    "Objects in JavaScript allow you to store collections of key-value pairs. You can see Objects in detail in [Objects in JavaScript](6.%20ObjectsInJS.ipynb) Here's an example of creating an object and accessing its properties:"
    ]
   },
   {
