:wrench: Fixed to run JS code on node server

--- a/1. Basics 🔰/1.GettingStartedWithJS.ipynb
+++ b/1. Basics 🔰/1.GettingStartedWithJS.ipynb
@@ -64,6 +64,10 @@
    },
    "outputs": [],
    "source": [
+    "%%script node\n",
+    "// Run node in Jupyter Notebook\n",
+    "\n",
+    "\n",
     "// Function declaration\n",
     "function greet(name) {\n",
     "  return \"Hello, \" + name + \"!\";\n",
@@ -92,6 +96,9 @@
    },
    "outputs": [],
    "source": [
+    "%%script node\n",
+    "// Run node in Jupyter Notebook\n",
+    "\n",
     "// If-else statement\n",
     "let num = 10;\n",
     "\n",
@@ -114,6 +121,9 @@
    },
    "outputs": [],
    "source": [
+    "%%script node\n",
+    "// Run node in Jupyter Notebook\n",
+    "\n",
     "// For loop\n",
     "for (let i = 0; i < 5; i++) {\n",
     "  console.log(\"Iteration: \" + i);\n",
