--- a/1. Basics 🔰/2. FunctionsInJs.ipynb
+++ b/1. Basics 🔰/2. FunctionsInJs.ipynb
@@ -23,6 +23,9 @@
    },
    "outputs": [],
    "source": [
+    "%%script node\n",
+    "// Run node in Jupyter Notebook\n",
+    "\n",
     "// Function Declaration\n",
     "function greet(name) {\n",
     "    return 'Hello, ' + name + '!';\n",
@@ -48,6 +51,9 @@
    },
    "outputs": [],
    "source": [
+    "%%script node\n",
+    "// Run node in Jupyter Notebook\n",
+    "\n",
     "// Function declaration\n",
     "function greet(name) {\n",
     "    return 'Hello, ' + name + '!';\n",
@@ -76,6 +82,9 @@
    },
    "outputs": [],
    "source": [
+    "%%script node\n",
+    "// Run node in Jupyter Notebook\n",
+    "\n",
     "// Anonymous function as a callback\n",
     "setTimeout(function() {\n",
     "    console.log('Delayed greeting after 3 seconds!');\n",
@@ -101,6 +110,9 @@
    },
    "outputs": [],
    "source": [
+    "%%script node\n",
+    "// Run node in Jupyter Notebook\n",
+    "\n",
     "// Arrow function\n",
     "const multiply = (a, b) => a * b;\n",
     "console.log(multiply(5, 3)); // Output: 15"
