--- a/1. Basics 🔰/4. ArraysAndObjects.ipynb
+++ b/1. Basics 🔰/4. ArraysAndObjects.ipynb
@@ -25,6 +25,9 @@
    },
    "outputs": [],
    "source": [
+    "%%script node\n",
+    "// Run node in Jupyter Notebook\n",
+    "\n",
     "// Creating an array\n",
     "let fruits = [\"apple\", \"banana\", \"cherry\"];\n",
     "\n",
@@ -54,6 +57,9 @@
    },
    "outputs": [],
    "source": [
+    "%%script node\n",
+    "// Run node in Jupyter Notebook\n",
+    "\n",
     "// Creating an object\n",
     "let person = { name: \"Alice\", age: 25, profession: \"Engineer\" };\n",
     "\n",
@@ -75,8 +81,22 @@
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "Python 3",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.11.4"
   }
  },
  "nbformat": 4,
