--- a/1. Basics 🔰/5. ArraysInJS.ipynb
+++ b/1. Basics 🔰/5. ArraysInJS.ipynb
@@ -51,6 +51,9 @@
    },
    "outputs": [],
    "source": [
+    "%%script node\n",
+    "// Run node in Jupyter Notebook\n",
+    "\n",
     "// Accessing array elements\n",
     "const colors = [\"red\", \"green\", \"blue\"];\n",
     "console.log(colors[0]); // Output: 'red'\n",
@@ -129,6 +132,9 @@
    },
    "outputs": [],
    "source": [
+    "%%script node\n",
+    "// Run node in Jupyter Notebook\n",
+    "\n",
     "// Iterating over arrays\n",
     "const numbers = [1, 2, 3, 4, 5];\n",
     "for (let i = 0; i < numbers.length; i++) {\n",
@@ -154,8 +160,22 @@
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "Python 3",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.11.4"
   }
  },
  "nbformat": 4,
