--- a/1. Basics 🔰/6. ObjectsInJS.ipynb
+++ b/1. Basics 🔰/6. ObjectsInJS.ipynb
@@ -58,6 +58,17 @@
    },
    "outputs": [],
    "source": [
+    "%%script node\n",
+    "// Run node in Jupyter Notebook\n",
+    "\n",
+    "// Creating an object\n",
+    "const person = {\n",
+    "    name: \"John Doe\",\n",
+    "    age: 30,\n",
+    "    isStudent: true,\n",
+    "    hobbies: [\"reading\", \"hiking\", \"coding\"],\n",
+    "  };\n",
+    "  \n",
     "// Accessing object properties\n",
     "console.log(person.name); // Output: 'John Doe'\n",
     "console.log(person[\"age\"]); // Output: 30"
@@ -82,10 +93,23 @@
    },
    "outputs": [],
    "source": [
+    "%%script node\n",
+    "// Run node in Jupyter Notebook\n",
+    "\n",
+    "//Creating an object\n",
+    "const person = {\n",
+    "    name: \"John Doe\",\n",
+    "    age: 30,\n",
+    "    isStudent: true,\n",
+    "    hobbies: [\"reading\", \"hiking\", \"coding\"],\n",
+    "  };\n",
+    "\n",
     "// Modifying objects\n",
     "person.age = 32; // Updating a property\n",
     "person.location = \"New York\"; // Adding a new property\n",
-    "delete person.isStudent; // Deleting a property"
+    "delete person.isStudent; // Deleting a property\n",
+    "\n",
+    "console.log(person); //displaying the object after modification"
    ]
   },
   {
@@ -99,14 +123,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {
     "vscode": {
      "languageId": "javascript"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hello, my name is Alice!\n"
+     ]
+    }
+   ],
    "source": [
+    "%%script node\n",
+    "// Run node in Jupyter Notebook\n",
+    "\n",
     "// Object methods\n",
     "const student = {\n",
     "  name: \"Alice\",\n",
@@ -159,8 +194,22 @@
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "Python 3",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.11.4"
   }
  },
  "nbformat": 4,
