--- a/1. Basics 🔰/7. LoopsInJS.ipynb
+++ b/1. Basics 🔰/7. LoopsInJS.ipynb
@@ -25,6 +25,9 @@
    },
    "outputs": [],
    "source": [
+    "%%script node\n",
+    "// Run node in Jupyter Notebook\n",
+    "\n",
     "// For loop\n",
     "console.log(\"For Loop:\");\n",
     "for (let i = 0; i < 5; i++) {\n",
@@ -51,6 +54,9 @@
    },
    "outputs": [],
    "source": [
+    "%%script node\n",
+    "// Run node in Jupyter Notebook\n",
+    "\n",
     "//While loop\n",
     "console.log(\"While Loop:\");\n",
     "let i = 0;\n",
@@ -79,6 +85,9 @@
    },
    "outputs": [],
    "source": [
+    "%%script node\n",
+    "// Run node in Jupyter Notebook\n",
+    "\n",
     "//Do while loop\n",
     "console.log(\"Do While Loop:\");\n",
     "i = 0;\n",
@@ -107,6 +116,9 @@
    },
    "outputs": [],
    "source": [
+    "%%script node\n",
+    "// Run node in Jupyter Notebook\n",
+    "\n",
     "// For-In Loop\n",
     "console.log(\"For-In Loop:\");\n",
     "const obj = { a: 1, b: 2, c: 3 };\n",
@@ -134,6 +146,9 @@
    },
    "outputs": [],
    "source": [
+    "%%script node\n",
+    "// Run node in Jupyter Notebook\n",
+    "\n",
     "// For-Of Loop\n",
     "console.log(\"For-Of Loop:\");\n",
     "const arr = [1, 2, 3, 4, 5];\n",
@@ -155,8 +170,22 @@
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "Python 3",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.11.4"
   }
  },
  "nbformat": 4,
