--- a/2. Intermediate 🌟/1. AsynchronousJS.ipynb
+++ b/2. Intermediate 🌟/1. AsynchronousJS.ipynb
@@ -25,6 +25,9 @@
    },
    "outputs": [],
    "source": [
+    "%%script node\n",
+    "// Run node in Jupyter Notebook\n",
+    "\n",
     "// Example of a callback\n",
     "function fetchData(callback) {\n",
     "  // Simulating data fetching\n",
@@ -58,6 +61,10 @@
    },
    "outputs": [],
    "source": [
+    "%%script node\n",
+    "// Run node in Jupyter Notebook\n",
+    "\n",
+    "\n",
     "// Example of a promise\n",
     "const fetchData = () => {\n",
     "  return new Promise((resolve, reject) => {\n",
@@ -89,14 +96,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
     "vscode": {
      "languageId": "javascript"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Some data retrieved!\n"
+     ]
+    }
+   ],
    "source": [
+    "%%script node\n",
+    "// Run node in Jupyter Notebook\n",
+    "\n",
     "// Example of async/await\n",
     "const fetchData = () => {\n",
     "  return new Promise((resolve, reject) => {\n",
@@ -131,8 +149,22 @@
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "Python 3",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.11.4"
   }
  },
  "nbformat": 4,
