enhanced 'Basic" section to some more concepts

--- a/1. Basics 🔰/2. FunctionsInJs.ipynb
+++ b/1. Basics 🔰/2. FunctionsInJs.ipynb
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
     "vscode": {
      "languageId": "javascript"
@@ -43,13 +43,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {
     "vscode": {
      "languageId": "javascript"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hello, John!\n"
+     ]
+    }
+   ],
    "source": [
     "%%script node\n",
     "// Run node in Jupyter Notebook\n",
@@ -74,13 +82,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {
     "vscode": {
      "languageId": "javascript"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Delayed greeting after 3 seconds!\n"
+     ]
+    }
+   ],
    "source": [
     "%%script node\n",
     "// Run node in Jupyter Notebook\n",
@@ -102,20 +118,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {
     "vscode": {
      "languageId": "javascript"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Total Amount: $137.5\n"
+     ]
+    }
+   ],
    "source": [
     "%%script node\n",
     "// Run node in Jupyter Notebook\n",
     "\n",
-    "// Arrow function\n",
-    "const multiply = (a, b) => a * b;\n",
-    "console.log(multiply(5, 3)); // Output: 15"
+    "\n",
+    "const calculateTotal = (price, quantity) => {\n",
+    "  const subtotal = price * quantity;\n",
+    "  const tax = subtotal * 0.1; // if we keep the tax 10% \n",
+    "  return subtotal + tax;\n",
+    "}\n",
+    "\n",
+    "console.log(`Total Amount: $${calculateTotal(25, 5)}`); // Output: Total Amount: $137.5\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Pro Tip: Keep in mind that arrow functions are widely used in React.js for defining methods within components. They provide a clean and convenient way to handle event callbacks and other functions while preserving the context of `this` within your components. You'll see arrow functions playing a significant role in your future React projects.\n"
    ]
   },
   {
@@ -144,7 +180,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.4"
+   "version": "3.12.0"
   }
  },
  "nbformat": 4,
