--- a/1. Basics 🔰/1.GettingStartedWithJS.ipynb
+++ b/1. Basics 🔰/1.GettingStartedWithJS.ipynb
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 9,
    "metadata": {
     "vscode": {
      "languageId": "javascript"
@@ -50,22 +50,22 @@
      "evalue": "invalid syntax (3594277558.py, line 1)",
      "output_type": "error",
      "traceback": [
-      "\u001b[1;36m  Cell \u001b[1;32mIn[6], line 1\u001b[1;36m\u001b[0m\n\u001b[1;33m    // Variable declaration\u001b[0m\n\u001b[1;37m    ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m invalid syntax\n"
+      "\u001b[1;36m  Cell \u001b[1;32mIn[9], line 1\u001b[1;36m\u001b[0m\n\u001b[1;33m    // Variable declaration\u001b[0m\n\u001b[1;37m    ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m invalid syntax\n"
      ]
     }
    ],
    "source": [
     "// Variable declaration\n",
-    "var greeting = \"Hello, world!\";\n",
+    "var greeting = 'Hello, world!';\n",
     "let number = 42;\n",
     "const pi = 3.14;\n",
     "\n",
     "// Data types\n",
-    "let name = \"John Doe\";\n",
+    "let name = 'John Doe';\n",
     "let age = 30;\n",
     "let isStudent = true;\n",
-    "let fruits = [\"apple\", \"banana\", \"cherry\"];\n",
-    "let person = { name: \"Alice\", age: 25 };"
+    "let fruits = ['apple', 'banana', 'cherry'];\n",
+    "let person = { name: 'Alice', age: 25 };\n"
    ]
   },
   {
@@ -214,25 +214,6 @@
     "    </script>\n",
     "  </body>\n",
     "</html>\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "**What the Code Does:**\n",
-    "\n",
-    "The provided HTML and JavaScript code creates an interactive webpage that allows you to change the background color with a simple click of a button. Here's how it works:\n",
-    "\n",
-    "1. **Button Setup**: We start by setting up a button element with the text \"Click Me!\".\n",
-    "\n",
-    "2. **JavaScript Function**: When you click the button, a JavaScript function is triggered. This function generates a random background color using a combination of letters and numbers and sets it as the background color for the entire webpage.\n",
-    "\n",
-    "3. **Smooth Transition**: We've added a smooth transition effect, making the color change visually pleasing.\n",
-    "\n",
-    "4. **Text Update**: The button text is dynamically updated with the current background color, providing instant feedback to the user.\n",
-    "\n",
-    "Above code is a fun example of how JavaScript can interact with the Document Object Model (DOM) to create an engaging and dynamic user experience on a webpage. We will Cover More DOM Manipulation in Advance Series of this Repossitery.🚀"
    ]
   },
   {
