added Closures and more web events

--- a/1. Basics 🔰/3. EventHandeling.ipynb
+++ b/1. Basics 🔰/3. EventHandeling.ipynb
@@ -81,6 +81,18 @@
     "});\n",
     "```\n",
     "\n",
+    "- **contextmenu event:**\n",
+    "  - This event is triggered when the right mouse button is clicked, opening the context menu. It can be used to customize actions for right-click interactions.\n",
+    "\n",
+    "- **scroll event:**\n",
+    "  - The scroll event is fired when the user scrolls through a web page. It's useful for implementing effects that respond to scrolling, such as parallax backgrounds or fixed navigation bars.\n",
+    "\n",
+    "- **resize event:**\n",
+    "  - This event is triggered when the size of the browser window is changed. It's beneficial for dynamically adjusting the layout or elements based on the window dimensions.\n",
+    "\n",
+    "- **error event:**\n",
+    "  - The error event is triggered when an error occurs while loading an external resource, like an image or script. It's useful for handling errors gracefully and providing fallbacks.\n",
+    "\n",
     "## Conclusion\n",
     "\n",
     "Understanding JavaScript events and event handling is crucial for creating interactive and dynamic web applications. Experiment with different events and event handlers to enhance the user experience and interactivity of your web pages.\n"
