--- a/1. Basics 🔰/1.GettingStartedWithJS.ipynb
+++ b/1. Basics 🔰/1.GettingStartedWithJS.ipynb
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 2,
    "metadata": {
     "vscode": {
      "languageId": "javascript"
@@ -47,10 +47,10 @@
    "outputs": [
     {
      "ename": "SyntaxError",
-     "evalue": "invalid syntax (3594277558.py, line 1)",
+     "evalue": "invalid syntax (649402130.py, line 1)",
      "output_type": "error",
      "traceback": [
-      "\u001b[1;36m  Cell \u001b[1;32mIn[9], line 1\u001b[1;36m\u001b[0m\n\u001b[1;33m    // Variable declaration\u001b[0m\n\u001b[1;37m    ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m invalid syntax\n"
+      "\u001b[1;36m  Cell \u001b[1;32mIn[2], line 1\u001b[1;36m\u001b[0m\n\u001b[1;33m    // Variable declaration\u001b[0m\n\u001b[1;37m    ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m invalid syntax\n"
      ]
     }
    ],
@@ -142,7 +142,19 @@
      "languageId": "javascript"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Iteration: 0\n",
+      "Iteration: 1\n",
+      "Iteration: 2\n",
+      "Iteration: 3\n",
+      "Iteration: 4\n"
+     ]
+    }
+   ],
    "source": [
     "%%script node\n",
     "// Run node in Jupyter Notebook\n",
