:link: linked project

--- a/2. Intermediate 🌟/3-Promises&Async.ipynb
+++ b/2. Intermediate 🌟/3-Promises&Async.ipynb
@@ -83,7 +83,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "A [MiniProject](../Projects%20📁/user-information-fetcher/) has the usage of Promises and Asynchronous programming in JavaScript."
+    "A [User Infromation Fetcher Project](../Projects%20📁/user-information-fetcher/) has the usage of Promises and Asynchronous programming in JavaScript."
    ]
   }
  ],
